# linear_algebra

./: CMakeLists.txt
include/echo/: linear_algebra.h
include/echo/linear_algebra/: blas_concept.h  cholesky.h  concept.h  conversion_evaluator.h  diagonal_matrix_evaluator.h  lapack_concept.h  least_squares.h  matrix.h  matrix_accessor.h  matrix_initializer.h  matrix_operation_expression.h  matrix_operation_expression_fwd.h  matrix_traits.h  numeric_array.h  operation.h  operation_evaluator.h  product.h  rank_update.h  singular_value_decomposition.h  solve.h  structure.h  submatrix.h  subvector.h  transpose.h  utility.h  vector.h
unittest/: cholesky_test.cpp  expression_test.cpp  least_squares_test.cpp  matrix_test.cpp  product_test.cpp  rank_update_test.cpp  singular_value_decomposition_test.cpp  solve_test.cpp  structure_test.cpp  submatrix_test.cpp  vector_test.cpp
